--- a/AutoDev_Lite_Part1.ipynb
+++ b/AutoDev_Lite_Part1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNswKIUEgA2sVaDy8PvgrR4",
+      "authorship_tag": "ABX9TyNO2ZmFyMTNuimncIQW7sSR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1859,9 +1859,55 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import nbformat\n",
+        "import os\n",
+        "\n",
+        "# Change this if your notebook name is different\n",
+        "notebook_path = \"/content/autodev_lite_cleaned.ipynb\"\n",
+        "\n",
+        "if not os.path.exists(notebook_path):\n",
+        "    print(\"❌ File not found:\", notebook_path)\n",
+        "else:\n",
+        "    with open(notebook_path, \"r\", encoding=\"utf-8\") as f:\n",
+        "        nb = nbformat.read(f, as_version=4)\n",
+        "\n",
+        "    # Remove broken widget metadata\n",
+        "    if 'widgets' in nb.metadata:\n",
+        "        del nb.metadata['widgets']\n",
+        "        print(\"🧹 Removed broken 'metadata.widgets'\")\n",
+        "    else:\n",
+        "        print(\"✅ No widgets to clean.\")\n",
+        "\n",
+        "    # Save cleaned notebook\n",
+        "    with open(notebook_path, \"w\", encoding=\"utf-8\") as f:\n",
+        "        nbformat.write(nb, f)\n",
+        "\n",
+        "    print(\"✅ Cleaned notebook saved:\", notebook_path)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2sIQ_Pc-P4xi",
+        "outputId": "8182c1a2-4f36-4b5b-9a7d-b7a86c7bc447"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "❌ File not found: /content/autodev_lite_cleaned.ipynb\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "2sIQ_Pc-P4xi"
+        "id": "Mga1BTTURRG_"
       },
       "execution_count": null,
       "outputs": []
